# computer_club

./: CMakeLists.txt  README.md  compilation instruction.md  main.cpp
include/: ComputerClub.h  InfoEvent.h  InfoTable.h  MyTime.h
src/: ComputerClub.cpp  InfoEvent.cpp  InfoTable.cpp  MyTime.cpp  clientArrivedEvent.cpp  clientIsWaitingEvent.cpp  clientLeftEvent.cpp  clientSatDownTableEvent.cpp  findClient.cpp  processingIncomingEvents.cpp
test_data/: result_testClientsWaitingAndSort.txt  result_testStartTimeGreatEndTime.txt  result_testYouShallNotPass.txt  testClientsWaitingAndSort.txt  testFormatError.txt  testStartTimeGreatEndTime.txt  testYouShallNotPass.txt
